Minor alignment issue for right/left aligned images on mobile

--- a/assets/sass/partials/_main.scss
+++ b/assets/sass/partials/_main.scss
@@ -3500,6 +3500,19 @@ img#wpstats {
         margin:0;
       }
     }
+    .entry-content {
+      img.alignleft {
+        margin: {
+          left: 0;
+        }
+      }
+      img.alignright {
+        margin: {
+         right: 0;
+        }
+      }
+    }
+
   }
   .sidebar {
     .widget-wrap {
